--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "description": "URL encode or decode the selected text.",
   "activationEvents": [ "url-encode:encode", "url-encode:decode" ],
-  "repository": "https://github.com/atom/url-encode",
+  "repository": "https://github.com/mmattozzi/url-encode",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
