Polish description for release.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "escape-utils",
   "main": "./lib/escape-utils",
   "version": "0.1.0",
-  "description": "(un)Escape strings using URL encoding, Base64, (planned: Base32, Base16, BinHex, Xml-Entitys, Html-Entites).",
+  "description": "(un)Escape strings using URL encoding, Base64, (planned: JS, Base32, Base16, BinHex, Xml-Entities, Html-Entities).",
   "activationEvents": [
     "escape-utils:url-encode",
     "escape-utils:url-decode",
